Добавлен частично работающий функционал расписания
